# sentinelle

./: README.md  communicator.py  counter_attack.py  database.py  dns_guard.py  escalation.py  ids_engine.py  install.sh  metadata_engine.py  process_monitor.py  pyproject.toml  resume.md  rule_updater.py  rules.yaml  sentinelle.py  signature_engine.py  state_manager.py  tests.py  traffic_monitor.py
